--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,13 @@ include 'DaoTest'
 include 'DaoTestPerformance'
 include 'DaoTestGenerator'
 include 'DaoExample'
+	dependencyResolutionManagement {
+		repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+		repositories {
+			mavenCentral()
+			maven { url 'https://jitpack.io' }
+		}
+	}dependencies {
+	        implementation 'com.github.yurialbetro9:greenDAO:Tag'
+	}
 
