--- a/DaoCore/build.gradle
+++ b/DaoCore/build.gradle
@@ -17,13 +17,16 @@ if(isSnapshot) {
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }  //
 }
+
 
 configurations {
     deployerJars
 }
 
-dependencies {
+dependencies {implementation 'com.github.yurialberto9:greenDAO:1.0.0'
+
     compileOnly 'com.google.android:android:4.1.1.4'
     compileOnly 'com.google.android:android-test:4.1.1.4'
     compileOnly 'com.google.android:annotations:4.1.1.4'
